--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NAVER</title>
-    <link rel="stylesheet" href="../naver/asset/css/layout.css">
-    <link rel="stylesheet" href="../naver/asset/css/main.css">
+    <link rel="stylesheet" href="../asset/css/layout.css">
+    <link rel="stylesheet" href="./asset/css/main.css">
     <link rel="shortcut icon" href="./asset/images/favicon.png" type="img/png">
 </head>
 <body>
