--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NAVER</title>
-    <link rel="stylesheet" href="../asset/css/layout.css">
+    <link rel="stylesheet" href="./asset/css/layout.css">
     <link rel="stylesheet" href="./asset/css/main.css">
     <link rel="shortcut icon" href="./asset/images/favicon.png" type="img/png">
 </head>
@@ -190,7 +190,7 @@
                         <div class="group-theme list1">
                             <div class="list1-inner">
                                 <a href="" class="list1-thumb">
-                                    <img src="../naver/asset/images/tumb-left.jpg" alt="">
+                                    <img src="./asset/images/tumb-left.jpg" alt="">
                                     <i class="ic-play"><span class="blind">재생</span></i>
                                 </a>
                                 <a href="" class="list1-info">
@@ -206,7 +206,7 @@
                             </div>
                             <div class="list1-inner">
                                 <a href="" class="list1-thumb">
-                                    <img src="../naver/asset/images/thumb-right.jpg" alt="">
+                                    <img src="./asset/images/thumb-right.jpg" alt="">
                                     <i class="ic-play"><span class="blind">재생</span></i>
                                 </a>
                                 <a href="" class="list1-info">
@@ -285,7 +285,7 @@
                             <div class="group-theme list3 video">
                                 <ul class="list3-list">
                                     <li class="list3-item">
-                                        <a href="" class="list3-thumb"><img src="../naver/asset/images/thumb-hr-post.jpg" alt=""><i class="ic-play"><span class="blind">재생</span></i></a>
+                                        <a href="" class="list3-thumb"><img src="./asset/images/thumb-hr-post.jpg" alt=""><i class="ic-play"><span class="blind">재생</span></i></a>
                                         <a href="" class="list3-info">
                                             <strong class="title">유통기한은 숫자일 뿐! 버터의 모든 것</strong>
                                             <div class="source-area">
@@ -295,7 +295,7 @@
                                         </a>
                                     </li>
                                     <li class="list3-item">
-                                        <a href="" class="list3-thumb"><img src="../naver/asset/images/thumb-hr-post.jpg" alt=""><i class="ic-play"><span class="blind">재생</span></i></a>
+                                        <a href="" class="list3-thumb"><img src="./asset/images/thumb-hr-post.jpg" alt=""><i class="ic-play"><span class="blind">재생</span></i></a>
                                         <a href="" class="list3-info">
                                             <strong class="title">유통기한은 숫자일 뿐! 버터의 모든 것</strong>
                                             <div class="source-area">
@@ -305,7 +305,7 @@
                                         </a>
                                     </li>
                                     <li class="list3-item">
-                                        <a href="" class="list3-thumb"><img src="../naver/asset/images/thumb-hr-post.jpg" alt=""><i class="ic-play"><span class="blind">재생</span></i></a>
+                                        <a href="" class="list3-thumb"><img src="./asset/images/thumb-hr-post.jpg" alt=""><i class="ic-play"><span class="blind">재생</span></i></a>
                                         <a href="" class="list3-info">
                                             <strong class="title">유통기한은 숫자일 뿐! 버터의 모든 것</strong>
                                             <div class="source-area">
