--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>NAVER</title>
     <link rel="stylesheet" href="./asset/css/layout.css">
     <link rel="stylesheet" href="./asset/css/main.css">
-    <link rel="shortcut icon" href="./asset/images/favicon.png" type="img/png">
+    <link rel="shortcut icon" href="./asset/images/favicon.ico" type="img/x-img">
 </head>
 <body>
     <!--  -->
